syntax = "proto3";

package todoapp.v1;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service TodoAppService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest {
  string todo = 2 [(validate.rules).string = {
    min_len: 1,
    max_len: 5000
  }];
}

message CreateResponse {
  string user_id = 1;
  string todo_id = 2;
  string todo = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ReadRequest {
  string todo_id = 2 [(validate.rules).string = {
    min_len: 1,
    max_len: 100
  }];
}

message ReadResponse {
  string user_id = 1;
  string todo_id = 2;
  string todo = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ReadAllRequest {}

message ReadAllResponse {
  repeated ReadResponse todos = 1;
  int64 last_index = 2;
}

message UpdateRequest {
  string todo_id = 2 [(validate.rules).string = {
    min_len: 1,
    max_len: 100
  }];

  string todo = 3 [(validate.rules).string = {
    min_len: 1,
    max_len: 5000
  }];
}

message UpdateResponse {
  string user_id = 1;
  string todo_id = 2;
  string todo = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message DeleteRequest {
  string todo_id = 2 [(validate.rules).string = {
    min_len: 1,
    max_len: 100
  }];
}

message DeleteResponse {}
